森王第8次上传 完成置顶

--- a/html/Shortcodes.html
+++ b/html/Shortcodes.html
@@ -37,8 +37,8 @@
                 <span class="menu"> <img src="../images/icon.png" alt=""/></span>
                 <ul class="res">
                     <a  href="index.html"><span class="res1">Home</span></a>
-                    <a href="about.html"><span class="res1">About</span></a>
-                    <a class="active" href="shortcodes.html"><span class="res1">Shortcodes</span></a>
+                    <a href="About.html"><span class="res1">About</span></a>
+                    <a class="active" href="Shortcodes.html"><span class="res1">Shortcodes</span></a>
                     <a href="gallery.html"><span class="res1">Gallery</span></a>
                     <a href="contact.html"><span class="res1"> Contact</span></a>
                 </ul>
