森王第9次上传 (汉化中)

--- a/html/index.html
+++ b/html/index.html
@@ -74,7 +74,8 @@
         <div class="container">
             <div class="banner-text">
                 <h2>Hello Summer</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p>你好 , 夏天</p>
+                <p>炎炎夏日等什么，清凉饮品等着你、甜甜的味蕾，浓浓的味道，满满的幸福、一口沁人心肠，心情妙不可言！滴水香甜，泛起友谊的小船！绝非横空出世，已经酝酿已久。</p>
             </div>
         </div>
     </div>
@@ -89,22 +90,22 @@
             <div class="awesome-main">
                 <div class="awesome-top wow fadeInLeftBig" data-wow-delay="0.3s">
                     <h1>Awesome</h1>
-                    <p>We denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure</p>
+                    <p>酷夏为您精心推荐</p>
                 </div>
                 <div class="awesome-bottom wow zoomIn" data-wow-delay="0.3s">
                     <div class="col-md-4 awesome-grid">
                         <span class="glyphicon glyphicon-ice-lolly-tasted"> </span>
-                        <h4>Lorem ipsum</h4>
+                        <h4>雪糕冰棒</h4>
                         <p>Sed do eiusmod tempor incididunt dolore magna aliqua</p>
                     </div>
                     <div class="col-md-4 awesome-grid">
                         <span class="glyphicon glyphicon-glass"> </span>
-                        <h4>Lorem ipsum</h4>
+                        <h4>清凉饮品</h4>
                         <p>Sed do eiusmod tempor incididunt dolore magna aliqua</p>
                     </div>
                     <div class="col-md-4 awesome-grid">
                         <span class="glyphicon glyphicon-ice-lolly"> </span>
-                        <h4>Lorem ipsum</h4>
+                        <h4>为您定制</h4>
                         <p>Sed do eiusmod tempor incididunt dolore magna aliqua</p>
                     </div>
                     <div class="clearfix"> </div>
@@ -120,9 +121,8 @@
             <div class="cream-amin">
                 <div class="col-md-5 cream-left wow fadeInLeftBig" data-wow-delay="0.3s">
                     <h4>Lorem ipsum</h4>
-                    <h5>Sed ut perspiciatis unde omnis</h5>
-                    <p>Voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
-                        explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt</p>
+                    <h5>这是最为之重要的</h5>
+                    <p>洛丹蒂乌姆，托塔姆雷阿普里姆，所有的建筑都是真实的。尼莫·伊比姆·弗拉普塔姆·弗拉普塔斯坐着，也可以说:“这是你的未来”。</p>
                 </div>
                 <div class="col-md-7 cream-right wow fadeInRightBig" data-wow-delay="0.3s">
                     <div class="ice-block">
@@ -163,34 +163,34 @@
         <div class="container">
             <div class="project-main">
                 <div class="project-top wow fadeInLeftBig" data-wow-delay="0.3s">
-                    <h3>Our Specials</h3>
-                    <p>We denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure.</p>
+                    <h3>我们的特色</h3>
+                    <p>我们义愤填膺地谴责那些被快乐的魅力所迷惑和意志消沉的人，我们对此深恶痛绝。</p>
                 </div>
                 <div class="project-bottom wow zoomIn" data-wow-delay="0.3s">
                     <div class="project-grid pro-small">
                         <div class="size1">
-                            <h4>$2.9</h4>
+                            <h4>￥7.9</h4>
                         </div>
-                        <h3>Vanilla</h3>
+                        <h3>香草奶盖</h3>
                     </div>
                     <div class="project-grid pro-medium">
                         <div class="size2">
-                            <h4>$4.5</h4>
+                            <h4>￥12.0</h4>
                         </div>
-                        <h3>Choclate</h3>
+                        <h3>巧克力雪棍</h3>
                     </div>
 
                     <div class="project-grid pro-large">
                         <div class="size3">
-                            <h4>$5.0</h4>
+                            <h4>￥16.0</h4>
                         </div>
-                        <h3>ButterScotch</h3>
+                        <h3>奶油冰淇淋糖果</h3>
                     </div>
                     <div class="project-grid pro-very-large">
                         <div class="size4">
-                            <h4>$5.5</h4>
+                            <h4>￥20.0</h4>
                         </div>
-                        <h3>Cone</h3>
+                        <h3>巧克力豪华圣代杯</h3>
                     </div>
                     <div class="clearfix"> </div>
                 </div>
@@ -212,11 +212,12 @@
                     <li><a class="twit" href="#"> </a></li>
                     <li><a class="dri" href="#"> </a></li>
                 </ul>
-                <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti.</p>
+                <p>欢迎将我们本网址分享给您的好友，家人或是上传至Facebook，Twitter等。</p>
+                <p>感谢您的光临 !</p>
             </div>
             <div class="col-md-4 footer-grid">
                 <h3>Lorem ipsum dolor</h3>
-                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+                <p>在我们的国家里，有许多人都是欧洲人。</p>
                 <ul>
                     <li><span class="glyphicon glyphicon-triangle-right"> </span> <a href="#">Nemo enim ipsam voluptatem quia</a></li>
                     <li><span class="glyphicon glyphicon-triangle-right"> </span> <a href="#">Nemo enim ipsam voluptatem quia</a></li>
@@ -224,13 +225,13 @@
                 </ul>
             </div>
             <div class="col-md-4 footer-grid">
-                <h3>Lorem ipsum dolor</h3>
+                <h3>联系方式</h3>
                 <div class="ftr-icons">
                     <div class="ftr-iblock">
                         <span class="glyphicon glyphicon-map-marker">  </span>
                     </div>
                     <div class="ftr-text">
-                        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+                        <p>地理位置: <br/>成都市天府新区-成都工业职业技术学院</p>
                     </div>
                     <div class="clearfix"> </div>
                 </div>
@@ -239,7 +240,7 @@
                         <span class="glyphicon glyphicon-earphone">  </span>
                     </div>
                     <div class="ftr-text">
-                        <p>Nemo enim ipsam voluptatem quia It is a long established</p>
+                        <p>联系电话：<br/>135X XXXX X12</p>
                     </div>
                     <div class="clearfix"> </div>
                 </div>
@@ -248,7 +249,7 @@
                         <span class="glyphicon glyphicon-envelope">  </span>
                     </div>
                     <div class="ftr-text">
-                        <p><a href="mailto:info@example.com">lorem@example.com</a></p>
+                        <p><a href="mailto:info@example.com">coolsummer@juanjuanzu.com</a></p>
                     </div>
                     <div class="clearfix"> </div>
                 </div>
@@ -262,7 +263,7 @@
 <div class="copy-right">
     <div class="container">
         <div class="copy-rights-main wow zoomIn" data-wow-delay="0.3s">
-            <p>Copyright &copy; 2018.Company name All rights reserved.More Templates </p>
+            <p>Copyright &copy; 2018.www.CoolSummer.com.Company name All rights reserved. </p>
         </div>
     </div>
 </div>
